docs: documented every unclear spot in the updater module
+ deleted ByteFormatter, since it's only caller was it's own test.