@@ -38,19 +38,32 @@ import java.util.concurrent.atomic.AtomicLongArray;
  */
 final class ChunkedDownload {
 
-    // 8 is the industry standard (IDM, aria2) and well within
-    // GitHub CDN's per-IP connection limits (~16).
+    /*
+     * 8 is the industry standard (IDM, aria2) and well within
+     * GitHub CDN's per-IP connection limits (~16). Going past that limit does
+     * not just stop helping - the CDN starts refusing connections.
+    */
     static final int MAX_CONNECTIONS = 8;
 
-    // Below 2 MB, the overhead of N TLS handshakes + thread setup
-    // exceeds the gain from parallel transfer.
+    /*
+     * Below 2 MB, the overhead of N TLS handshakes + thread setup
+     * exceeds the gain from parallel transfer.
+    */
     static final long MIN_PARALLEL_SIZE = 2_000_000;
 
+    /*
+     * One connection per megabyte. The ratio is what keeps small-but-eligible
+     * files from opening the full eight sockets for a transfer that ends before
+     * the handshakes have paid for themselves.
+    */
     private static final long BYTES_PER_CONNECTION = 1_000_000;
 
-    // HTTP/1.1 forces separate TCP sockets per request.
-    // HTTP/2 would multiplex all chunks over one socket,
-    // defeating the per-connection throttle bypass.
+    /*
+     * HTTP/1.1 forces separate TCP sockets per request.
+     * HTTP/2 would multiplex all chunks over one socket,
+     * defeating the per-connection throttle bypass. This is also why the client
+     * is separate from Downloader.HTTP rather than shared with it.
+    */
     private static final HttpClient HTTP11 = HttpClient.newBuilder()
             .version(HttpClient.Version.HTTP_1_1)
             .followRedirects(HttpClient.Redirect.NORMAL)
@@ -66,8 +79,14 @@ final class ChunkedDownload {
      * for parallel download to help.
      */
     static int calculateConnections(long totalBytes) {
-        if (totalBytes <= 0 || totalBytes < MIN_PARALLEL_SIZE) return 1;
-        return Math.min(MAX_CONNECTIONS, Math.max(1, (int) (totalBytes / BYTES_PER_CONNECTION)));
+
+        /*
+         * Also the unknown-size exit: Content-Length missing arrives here as -1,
+         * falls under the threshold, and takes the single-connection path - which
+         * is the only correct answer, since ranges cannot be cut without a size.
+        */
+        if (totalBytes < MIN_PARALLEL_SIZE) return 1;
+        return Math.clamp((int) (totalBytes / BYTES_PER_CONNECTION), 1, MAX_CONNECTIONS);
     }
 
     /**
@@ -84,17 +103,41 @@ final class ChunkedDownload {
      */
     static byte[] execute(String url, long totalBytes, int connections,
             DownloadProgressListener listener) throws IOException {
+
+        /*
+         * Allocated up front at full size so every chunk can write straight into
+         * its own slice - that is what makes the merge step unnecessary. The int
+         * cast caps the payload at 2 GB, which an update archive stays well
+         * under; anything larger would have to go the streaming route instead.
+        */
         byte[] result = new byte[(int) totalBytes];
         AtomicLong globalTransferred = new AtomicLong(0);
         AtomicLongArray chunkProgress = new AtomicLongArray(connections);
 
+        /*
+         * Integer division drops the remainder, so this is the size of all
+         * chunks but the last - the last one absorbs what is left over below.
+        */
         long chunkSize = totalBytes / connections;
 
+        /*
+         * Closing the pool is what waits for the threads. On the
+         * try-with-resources exit the executor shuts down and blocks until every
+         * chunk has finished, so no task can outlive the array it writes into.
+        */
         try (ExecutorService pool = Executors.newFixedThreadPool(connections)) {
             @SuppressWarnings("unchecked")
             Future<Void>[] futures = new Future[connections];
 
             for (int i = 0; i < connections; i++) {
+
+                /*
+                 * Half-open ranges would leave gaps: HTTP ranges are inclusive on
+                 * both ends, so each chunk stops one byte short of the next one's
+                 * start. The last chunk runs to the true end rather than to its
+                 * calculated one, picking up the remainder that the division above
+                 * discarded - without it the file's tail would never be requested.
+                */
                 long start = i * chunkSize;
                 long end = (i == connections - 1) ? totalBytes - 1 : (start + chunkSize - 1);
                 int chunkIndex = i;
@@ -111,14 +154,32 @@ final class ChunkedDownload {
 
             for (Future<Void> f : futures) {
                 try {
+
+                    /*
+                     * get() is what surfaces a chunk's exception: a failure inside
+                     * a submitted task is otherwise held in its Future and would
+                     * pass unnoticed, leaving a hole of zero bytes in the result.
+                    */
                     f.get();
                 } catch (Exception e) {
+
+                    /*
+                     * One dead chunk makes the whole array worthless, so the
+                     * remaining ones are cancelled rather than left to finish -
+                     * otherwise the close above would still wait out every one of
+                     * them before the exception could propagate.
+                    */
                     pool.shutdownNow();
                     throw new IOException("Parallel download failed: " + e.getMessage(), e);
                 }
             }
         }
 
+        /*
+         * The per-chunk updates are throttled and interleaved, so the last one
+         * reported may sit just short of the total. This sets the bar to
+         * complete once the data actually is.
+        */
         listener.onProgress(totalBytes, totalBytes);
         log("Parallel download complete: " + formatBytes(totalBytes));
         return result;
@@ -129,6 +190,12 @@ final class ChunkedDownload {
             AtomicLongArray chunkProgress, AtomicLong globalTransferred,
             long totalBytes, DownloadProgressListener listener) throws IOException {
         try {
+
+            /*
+             * The Range header is the whole mechanism: without it every thread
+             * would fetch the identical full file. Both ends are inclusive, as
+             * the ranges cut in execute() assume.
+            */
             HttpRequest request = HttpRequest.newBuilder(URI.create(url))
                     .header("User-Agent", Downloader.USER_AGENT)
                     .header("Range", "bytes=" + rangeStart + "-" + rangeEnd)
@@ -136,6 +203,10 @@ final class ChunkedDownload {
             HttpResponse<InputStream> response = HTTP11.send(request,
                     HttpResponse.BodyHandlers.ofInputStream());
 
+            /*
+             * 206 is the answer to a Range request; a server that ignores the
+             * header answers 200 with the entire file instead.
+            */
             int status = response.statusCode();
             if (status != 206 && status != 200) {
                 throw new IOException("HTTP " + status + " for range " + rangeStart + "-" + rangeEnd);
@@ -147,11 +218,29 @@ final class ChunkedDownload {
                 int read;
                 long lastUpdate = 0;
                 while ((read = in.read(buffer)) != -1) {
+
+                    /*
+                     * Every thread writes into its own disjoint stretch of the
+                     * shared array, so no two ever touch the same index and no
+                     * lock is needed. Visibility of those writes to the caller is
+                     * carried by the Future.get() in execute().
+                    */
                     System.arraycopy(buffer, 0, target, pos, read);
                     pos += read;
+
+                    /*
+                     * The listener is handed the aggregate across all chunks, not
+                     * this chunk's own count - a bar per connection would be
+                     * meaningless to whoever is watching one download.
+                    */
                     long total = globalTransferred.addAndGet(read);
                     chunkProgress.addAndGet(chunkIndex, read);
 
+                    /*
+                     * 100ms here against the 50ms of the single-connection path,
+                     * because N threads report in parallel: at eight connections
+                     * this still amounts to roughly eighty updates a second.
+                    */
                     long now = System.currentTimeMillis();
                     if (now - lastUpdate > 100) {
                         listener.onProgress(total, totalBytes);
@@ -160,6 +249,11 @@ final class ChunkedDownload {
                 }
             }
         } catch (InterruptedException e) {
+
+            /*
+             * Restores the flag send() cleared, so that a shutdownNow() from
+             * execute() is not silently absorbed by this chunk.
+            */
             Thread.currentThread().interrupt();
             throw new IOException("Chunk download interrupted", e);
         }
